# ai-sdlc-claudecode

./: .coverage  .gitignore  COMPARISON-metagpt.md  Makefile  README.md  ai-review-checker.sh  orchestrate-parallel.sh  pipeline-cleanup.sh  pipeline-dag.json  pipeline-executor.sh  pipeline-init.sh  pipeline-list.sh  pipeline-monitor.sh  pipeline-status.sh  pyproject.toml  validate-handoff.sh
.claude/: settings.json
docs/: ai-sdlc-optimization-plan.md  integration-guide-bmad-gstack.md  superpowers-optimization-plan.md  superpowers-patterns-analysis.md  usage-guide-feynman.md
lib/: check-scope.sh  events.sh  protocol.sh  review-scorecard.py  tdd-gate.sh
prompts/: quality-lessons.md
prompts/methods/: adversarial-review.md  anti-rationalization.md  anti-slop.md  code-review.md  diagnostic-retry.md  self-review-loop.md  stage-methods.json  tdd.md  verification.md
prompts/reviews/: S0-devils-advocate.md  S0p-demand-critic.md  S1-architect-checker.md  (+2 more)
schemas/: architecture-output.json  backend-output.json  browser-qa-output.json  deployment-output.json  documentation-output.json  e2e-test-output.json  frontend-output.json  integration-test-output.json  monitoring-output.json  performance-output.json  product-discovery-output.json  release-output.json  requirements-output.json  review-output.json  smoke-test-output.json  strategic-review-output.json  testing-output.json  ui-design-output.json
scripts/: completeness-check.sh  smoke-test.sh
tests/: test_config.py  test_engine.py  test_extract.py  test_memory.py  test_runner.py  test_state.py  test_summarizer.py
(+112 files in other folders)
