[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-sdlc-claudecode"
version = "1.0.0"
description = "Self-Evolving Autonomous Agent — learns from errors, never repeats mistakes"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

# Zero external dependencies — stdlib only
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
ai-sdlc = "ai_sdlc_claudecode.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ai_sdlc_claudecode = ["bash/*.sh", "bash/*.json", "bash/schemas/*.json", "bash/lib/*.sh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["ai_sdlc_claudecode"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 50
